--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -8,37 +8,37 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/img/snower-36.png",
+      "src": "./img/snower-36.png",
       "sizes": "36x36",
       "type": "image/png"
     },
     {
-      "src": "/img/snower-48.png",
+      "src": "./img/snower-48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/img/snower-72.png",
+      "src": "./img/snower-72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/img/snower-96.png",
+      "src": "./img/snower-96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/img/snower-144.png",
+      "src": "./img/snower-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/img/snower-192.png",
+      "src": "./img/snower-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#000000",
