--- a/package.json
+++ b/package.json
@@ -39,18 +39,21 @@
     "setupTestFrameworkScriptFile": "./src/test/setupTest.ts"
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "recompose": "^0.30.0",
     "styled-components": "^3.4.2"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.13",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.1",
-    "@types/react": "^16.4.11",
+    "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "@types/recompose": "^0.26.4",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "^1.3.1",
     "jest": "^23.4.2",
     "jest-styled-components": "^6.1.1",
     "prettier": "^1.14.0",
@@ -58,11 +61,11 @@
     "ts-jest": "^23.1.2",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.9.2",
+    "tslint-config-airbnb": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
     "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.0.3",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-serve": "^2.0.2",
