--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "tslint -c tslint.json -p tsconfig.json --fix ./src/ts/*.tsx",
     "precommit": "lint-staged",
     "test": "jest",
-    "start": "webpack-serve --config webpack.config.js",
+    "start": "webpack-dev-server --config webpack.config.js --hot",
     "sw:generate": "workbox generateSW workbox-config.js"
   },
   "lint-staged": {
@@ -39,36 +39,36 @@
     "setupTestFrameworkScriptFile": "./src/test/setupTest.ts"
   },
   "dependencies": {
-    "@material-ui/core": "^3.0.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "@material-ui/core": "^3.1.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "recompose": "^0.30.0",
-    "styled-components": "^3.4.2"
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.13",
+    "@types/enzyme": "^3.1.14",
     "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/jest": "^23.3.1",
-    "@types/react": "^16.4.13",
+    "@types/jest": "^23.3.2",
+    "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
-    "@types/recompose": "^0.26.4",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.3.1",
-    "jest": "^23.4.2",
-    "jest-styled-components": "^6.1.1",
-    "prettier": "^1.14.0",
-    "react-test-renderer": "^16.4.2",
-    "ts-jest": "^23.1.2",
-    "ts-loader": "^4.4.2",
+    "@types/recompose": "^0.26.5",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "jest": "^23.6.0",
+    "jest-styled-components": "^6.2.0",
+    "prettier": "^1.14.3",
+    "react-test-renderer": "^16.5.2",
+    "ts-jest": "^23.10.0",
+    "ts-loader": "^5.1.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
-    "tslint-plugin-prettier": "^1.3.0",
+    "tslint-plugin-prettier": "^2.0.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.3",
-    "webpack": "^4.16.5",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
-    "webpack-serve": "^2.0.2",
-    "workbox-cli": "^3.4.1"
+    "webpack-dev-server": "^3.1.8",
+    "workbox-cli": "^3.6.1"
   }
 }
